--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@ body {
   padding-top: 30px;
 }
 
+p {
+  margin: 0;
+}
+
 a {
   text-decoration: none;
 }
@@ -25,8 +29,10 @@ img {
 }
 
 .container {
-  max-width: 1170px;
+  max-width: 1200px;
   margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .logo-block {
@@ -54,13 +60,18 @@ img {
   display: flex;
 }
 
-.nav-item {
+.nav-item:not(:last-child) {
   margin-right: 45px;
 }
 
 .search {
+  padding: 0px 20px;
   width: 355px;
   height: 50px;
+}
+
+.section-hero {
+  padding-top: 70px;
 }
 
 .hero-container {
@@ -68,13 +79,20 @@ img {
 }
 
 .section-heading {
+  margin-top: 0;
   margin-bottom: 30px;
   padding-left: 45px;
 }
 
+.booking-block {
+  max-width: 515px;
+  margin-right: 55px;
+}
+
 .booking-input {
-  margin-bottom: 25px;
-  width: 512px;
+  margin-bottom: 24px;
+  padding: 0px 20px;
+  width: 515px;
   height: 70px;
 }
 
@@ -83,10 +101,66 @@ img {
   align-items: center;
 }
 
+.booking-btn {
+  padding: 25px 30px;
+}
+
 .booking-offers {
   margin-left: 30px;
 }
 
-.special-offer-block {
-  flex-shrink: 0;
+.special-offer-banner {
+  position: relative;
+}
+
+.special-offer-text {
+  position: absolute;
+  left: 45px;
+  bottom: 45px;
+  max-width: 320px;
+}
+
+.special-offer-title {
+  display: inline-block;
+  margin-bottom: 45px;
+  font-size: 66px;
+  color: #fff;
+}
+
+.special-offer-more-block {
+  display: flex;
+}
+
+.special-offer-more {
+  margin-left: 40px;
+}
+
+.section {
+  padding-top: 70px;
+}
+
+.about-text {
+  padding-left: 45px;
+  max-width: 895px;
+}
+
+.services-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.services-item {
+  max-width: 572px;
+}
+
+.services-item-text {
+  padding: 35px 0px;
+  padding-left: 45px;
+  max-width: 405px;
+}
+
+.services-item-title {
+  margin: 0;
+  margin-bottom: 20px;
 }
