--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ html {
 
 body {
   padding-top: 30px;
+  padding-bottom: 50px;
 }
 
 p {
@@ -38,6 +39,11 @@ img {
 .logo-block {
   display: flex;
   align-items: center;
+  outline: 2px solid red;
+}
+
+.logo {
+  font-size: 0;
 }
 
 .phone {
@@ -46,6 +52,7 @@ img {
 
 .login {
   margin-left: auto;
+  padding-right: 10px;
 }
 
 .nav-block {
@@ -54,6 +61,7 @@ img {
   align-items: center;
   margin-top: 30px;
   padding: 10px 20px;
+  outline: 2px solid red;
 }
 
 .nav-list {
@@ -80,7 +88,7 @@ img {
 
 .section-heading {
   margin-top: 0;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
   padding-left: 45px;
 }
 
@@ -131,6 +139,10 @@ img {
   display: flex;
 }
 
+.special-offer-price {
+  color: #fff;
+}
+
 .special-offer-more {
   margin-left: 40px;
 }
@@ -151,16 +163,86 @@ img {
 }
 
 .services-item {
-  max-width: 572px;
+  margin-top: 25px;
+  width: 572px;
+  outline: 2px solid red;
 }
 
 .services-item-text {
   padding: 35px 0px;
   padding-left: 45px;
-  max-width: 405px;
+  max-width: 440px;
 }
 
 .services-item-title {
   margin: 0;
   margin-bottom: 20px;
+}
+
+.no-margin-heading {
+  margin: 0;
+}
+
+.advantages-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.advantages-item {
+  margin-top: 25px;
+  padding: 45px;
+  width: 275px;
+  height: 275px;
+  outline: 2px solid red;
+}
+
+.places-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.places-item {
+  margin-top: 25px;
+  width: 373px;
+  height: 440px;
+  outline: 2px solid red;
+}
+
+.places-item-text-block {
+  position: relative;
+  padding: 35px 45px 45px;
+}
+
+.places-rating {
+  position: absolute;
+  top: 35px;
+  right: 45px;
+}
+
+.price-text {
+  margin-bottom: 15px;
+}
+
+.place-location {
+  margin-top: 15px;
+}
+
+.places-btn {
+  display: inline-block;
+  margin-top: 25px;
+  padding: 15px 20px;
+  outline: 2px solid red;
+}
+
+.places-more-banner {
+  position: relative;
+}
+
+.places-more-text {
+  position: absolute;
+  bottom: 55px;
+  left: 40px;
+  color: #fff;
 }
