--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,59 @@
+/* Fonts */
+
+/* Muller Light */
+@font-face {
+  font-family: 'Muller';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Muller Light'), local('Muller-Light'),
+       url('/assets/fonts/MullerLight.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/assets/fonts/MullerLight.woff') format('woff'); /* Modern Browsers */
+}
+
+/* Muller Regular */
+@font-face {
+  font-family: 'Muller';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Muller Regular'), local('Muller-Regular'),
+       url('/assets/fonts/MullerRegular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/assets/fonts/MullerRegular.woff') format('woff'); /* Modern Browsers */
+}
+
+/* Muller Medium */
+@font-face {
+  font-family: 'Muller';
+  font-style: normal;
+  font-weight: 500;
+  src: local('Muller Medium'), local('Muller-Medium'),
+       url('/assets/fonts/MullerMedium.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/assets/fonts/MullerMedium.woff') format('woff'); /* Modern Browsers */
+}
+
+/* Muller Bold */
+@font-face {
+  font-family: 'Muller';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Muller Bold'), local('Muller-Bold'),
+       url('/assets/fonts/MullerBold.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/assets/fonts/MullerBold.woff') format('woff'); /* Modern Browsers */
+}
+
+/* Common styles */
+
 * {
   box-sizing: border-box;
 }
 
 html {
-  font-family: sans-serif;
+  font-family: 'Muller', sans-serif;
 }
 
 body {
   padding-top: 30px;
   padding-bottom: 50px;
+  background-color: #f1f1f1;
 }
 
 p {
@@ -36,10 +81,19 @@ img {
   padding-right: 15px;
 }
 
+.section {
+  padding-top: 70px;
+}
+
+.golden-text {
+  color: #cc9933;
+}
+
+/* Header */
+
 .logo-block {
   display: flex;
   align-items: center;
-  outline: 2px solid red;
 }
 
 .logo {
@@ -48,11 +102,20 @@ img {
 
 .phone {
   margin-left: 30px;
+  font-size: 22px;
+  line-height: 1;
+  font-weight: 700;
+  color: #666666;
+  transform: translateY(3px);
 }
 
 .login {
   margin-left: auto;
   padding-right: 10px;
+  font-size: 16px;
+  line-height: 1;
+  font-weight: 500;
+  transform: translateY(1px);
 }
 
 .nav-block {
@@ -61,7 +124,8 @@ img {
   align-items: center;
   margin-top: 30px;
   padding: 10px 20px;
-  outline: 2px solid red;
+  border-radius: 12px;
+  background-color: #fff;
 }
 
 .nav-list {
@@ -72,11 +136,34 @@ img {
   margin-right: 45px;
 }
 
+.nav-link {
+  font-size: 16px;
+  line-height: 1;
+  font-weight: 500;
+  color: #333333;
+}
+
 .search {
-  padding: 0px 20px;
+  padding-left: 20px;
+  padding-right: 45px;
+  border: 0;
+  border-radius: 15px;
+  outline: none;
   width: 355px;
   height: 50px;
+  font-size: 14px;
+  line-height: 1;
+  background: #f1f1f1 url(/assets/img/search.svg) no-repeat;
+  background-size: 22px;
+  background-position: 310px center;
 }
+
+.search::placeholder {
+  color: #bebebe;
+  font-size: 14px;
+}
+
+/* Section Hero */
 
 .section-hero {
   padding-top: 70px;
@@ -90,6 +177,10 @@ img {
   margin-top: 0;
   margin-bottom: 25px;
   padding-left: 45px;
+  font-size: 40px;
+  line-height: 32px;
+  font-weight: 400;
+  color: #333333;
 }
 
 .booking-block {
@@ -100,8 +191,16 @@ img {
 .booking-input {
   margin-bottom: 24px;
   padding: 0px 20px;
+  border: 0;
+  border-radius: 12px;
+  outline: none;
   width: 515px;
   height: 70px;
+}
+
+.search::placeholder {
+  color: #999999;
+  font-size: 16px;
 }
 
 .search-number {
@@ -111,10 +210,23 @@ img {
 
 .booking-btn {
   padding: 25px 30px;
+  border: 0;
+  border-radius: 12px;
+  outline: none;
+  font-size: 16px;
+  line-height: 1;
+  font-weight: 700;
+  color: #fff;
+  background-color: #cc9933;
+  cursor: pointer;
 }
 
 .booking-offers {
   margin-left: 30px;
+  font-size: 16px;
+  line-height: 32px;
+  font-weight: 500;
+  color: #999999;
 }
 
 .special-offer-banner {
@@ -125,30 +237,45 @@ img {
   position: absolute;
   left: 45px;
   bottom: 45px;
-  max-width: 320px;
+  max-width: 330px;
 }
 
 .special-offer-title {
   display: inline-block;
   margin-bottom: 45px;
   font-size: 66px;
+  line-height: 58px;
   color: #fff;
 }
 
 .special-offer-more-block {
   display: flex;
+  align-items: flex-end;
 }
 
 .special-offer-price {
+  font-size: 35px;
+  line-height: 1;
   color: #fff;
+  opacity: .49;
 }
 
 .special-offer-more {
   margin-left: 40px;
+  font-size: 16px;
+  line-height: 32px;
+  color: #ffcc66;
 }
 
-.section {
-  padding-top: 70px;
+.special-offer-arrow-icon {
+  display: inline-block;
+  margin-left: 3px;
+  width: 10px;
+  height: 15px;
+  background-image: url(/assets/img/arrow.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  transform: translateY(3px);
 }
 
 .about-text {
