--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,13 +88,6 @@ img {
   max-width: 100%;
 }
 
-/* .container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding-left: 15px;
-  padding-right: 15px;
-} */
-
 .section {
   padding-top: 70px;
 }
@@ -219,9 +212,8 @@ img {
 }
 
 .login {
-  /* margin-left: auto; */
   padding-top: 1px;
-  padding-right: 10px;
+  /* padding-right: 10px; */
   font-size: 16px;
   line-height: 1;
   font-weight: 500;
@@ -229,6 +221,7 @@ img {
 
 .nav-block {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   margin-top: 30px;
   padding: 10px 20px;
@@ -238,8 +231,8 @@ img {
 
 .nav-list {
   display: flex;
-  margin-right: calc(1130px - 640px - 355px);
 }
+
 .nav-item {
   transition: transform 1s;
 }
@@ -249,7 +242,7 @@ img {
 }
 
 .nav-item:not(:last-child) {
-  margin-right: 45px;
+  margin-right: 40px;
 }
 
 .nav-link {
@@ -295,8 +288,8 @@ img {
 }
 
 .booking-block {
-  max-width: 515px;
-  margin-right: 55px;
+  /* max-width: 515px;
+  margin-right: 55px; */
 }
 
 .booking-form-select {
@@ -333,6 +326,7 @@ img {
 }
 
 .special-offer-banner {
+  overflow: hidden;
   position: relative;
   max-height: 540px;
   border-radius: 12px;
@@ -343,6 +337,12 @@ img {
 .special-offer-banner:hover {
   box-shadow: 0 0 20px rgba(0, 0, 0, .651);
   transform: scale(1.03);
+}
+
+.special-offer-img {
+  object-fit: cover;
+  /* width: 100%; */
+  height: 100%;
 }
 
 .special-offer-text {
@@ -408,7 +408,7 @@ img {
 }
 
 .services-item {
-  width: calc(50% - 12.6px);
+  /* width: calc(50% - 12.6px); */
   border-radius: 12px;
   background-color: var(--white-color);
   transition-duration: 1s;
@@ -424,9 +424,9 @@ img {
   margin-top: 24px;
 }
 
-.services-item:nth-child(odd) {
+/* .services-item:nth-child(odd) {
   margin-right: 24px;
-}
+} */
 
 .services-item-text {
   padding: 35px 0px;
