--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,6 +186,11 @@ img {
   align-items: center;
 }
 
+.logo {
+  display: inline-block;
+  font-size: 0;
+}
+
 .logo-img {
   border-radius: 12px;
   font-size: 0;
@@ -242,7 +247,7 @@ img {
 }
 
 .nav-item:not(:last-child) {
-  margin-right: 40px;
+  margin-right: 45px;
 }
 
 .nav-link {
@@ -285,11 +290,11 @@ img {
 
 .hero-container {
   display: flex;
+  justify-content: space-between;
 }
 
 .booking-block {
-  /* max-width: 515px;
-  margin-right: 55px; */
+  max-width: 518px;
 }
 
 .booking-form-select {
@@ -326,10 +331,11 @@ img {
 }
 
 .special-offer-banner {
-  overflow: hidden;
   position: relative;
+  max-width: 595px;
   max-height: 540px;
   border-radius: 12px;
+  overflow: hidden;
   transition-duration: 1s;
   transition-property: box-shadow, transform;
 }
@@ -341,7 +347,6 @@ img {
 
 .special-offer-img {
   object-fit: cover;
-  /* width: 100%; */
   height: 100%;
 }
 
@@ -408,7 +413,7 @@ img {
 }
 
 .services-item {
-  /* width: calc(50% - 12.6px); */
+  width: calc(50% - 12.6px);
   border-radius: 12px;
   background-color: var(--white-color);
   transition-duration: 1s;
@@ -424,9 +429,9 @@ img {
   margin-top: 24px;
 }
 
-/* .services-item:nth-child(odd) {
+.services-item:nth-child(odd) {
   margin-right: 24px;
-} */
+}
 
 .services-item-text {
   padding: 35px 0px;
