--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,8 @@
   font-style: normal;
   font-weight: 300;
   src: local('Muller Light'), local('Muller-Light'),
-       url('/assets/fonts/MullerLight.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/assets/fonts/MullerLight.woff') format('woff'); /* Modern Browsers */
+       url('../fonts/MullerLight.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/MullerLight.woff') format('woff'); /* Modern Browsers */
 }
 
 /* Muller Regular */
@@ -16,8 +16,8 @@
   font-style: normal;
   font-weight: 400;
   src: local('Muller Regular'), local('Muller-Regular'),
-       url('/assets/fonts/MullerRegular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/assets/fonts/MullerRegular.woff') format('woff'); /* Modern Browsers */
+       url('../fonts/MullerRegular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/MullerRegular.woff') format('woff'); /* Modern Browsers */
 }
 
 /* Muller Medium */
@@ -26,8 +26,8 @@
   font-style: normal;
   font-weight: 500;
   src: local('Muller Medium'), local('Muller-Medium'),
-       url('/assets/fonts/MullerMedium.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/assets/fonts/MullerMedium.woff') format('woff'); /* Modern Browsers */
+       url('../fonts/MullerMedium.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/MullerMedium.woff') format('woff'); /* Modern Browsers */
 }
 
 /* Muller Bold */
@@ -36,8 +36,8 @@
   font-style: normal;
   font-weight: 700;
   src: local('Muller Bold'), local('Muller-Bold'),
-       url('/assets/fonts/MullerBold.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/assets/fonts/MullerBold.woff') format('woff'); /* Modern Browsers */
+       url('../fonts/MullerBold.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/MullerBold.woff') format('woff'); /* Modern Browsers */
 }
 
 /* Common styles */
@@ -270,7 +270,7 @@ img {
   height: 50px;
   font-size: 14px;
   line-height: 1;
-  background: var(--cream-color) url(/assets/img/search.svg) no-repeat;
+  background: var(--cream-color) url(../img/search.svg) no-repeat;
   background-size: 22px;
   background-position: 310px center;
   transition-duration: 1s;
@@ -386,7 +386,7 @@ img {
   margin-left: 3px;
   width: 10px;
   height: 15px;
-  background-image: url(/assets/img/arrow-1.svg);
+  background-image: url(../img/arrow-1.svg);
   background-size: contain;
   background-repeat: no-repeat;
   transform: translateY(3px);
@@ -453,7 +453,7 @@ img {
   margin-left: 6px;
   width: 10px;
   height: 15px;
-  background-image: url(/assets/img/arrow-2.svg);
+  background-image: url(../img/arrow-2.svg);
   background-size: contain;
   background-repeat: no-repeat;
   transform: translateY(2px);
@@ -493,45 +493,45 @@ img {
 
 .icon-bathhub {
   width: 63px;
-  background-image: url(/assets/img/bathtub.svg);
+  background-image: url(../img/bathtub.svg);
   background-position: 0 -2px;
 }
 
 .icon-hanger {
-  background-image: url(/assets/img/hanger.svg);
+  background-image: url(../img/hanger.svg);
 }
 
 .icon-heating {
   width: 69px;
-  background-image: url(/assets/img/heating.svg);
+  background-image: url(../img/heating.svg);
   background-position: 0 -5px;
 }
 
 .icon-hotel-key {
   width: 64px;
-  background-image: url(/assets/img/hotel-key.svg);
+  background-image: url(../img/hotel-key.svg);
   background-position: 0 -2px;
 }
 
 .icon-parking {
   width: 61px;
-  background-image: url(/assets/img/parking.svg);
+  background-image: url(../img/parking.svg);
 }
 
 .icon-reception {
   width: 64px;
-  background-image: url(/assets/img/reception.svg);
+  background-image: url(../img/reception.svg);
   background-position: 0 -2px;
 }
 
 .icon-security-box {
   width: 68px;
-  background-image: url(/assets/img/security-box.svg);
+  background-image: url(../img/security-box.svg);
   background-position: 0 -4px;
 }
 
 .icon-swimming-pool {
-  background-image: url(/assets/img/swimming-pool.svg);
+  background-image: url(../img/swimming-pool.svg);
 }
 
 /* Section Places */
@@ -607,7 +607,7 @@ img {
   align-items: flex-end;
   padding-bottom: 55px;
   padding-left: 40px;
-  background: url(/assets/img/41.png) center center / cover;
+  background: url(../img/41.png) center center / cover;
 }
 
 .places-more-text {
@@ -631,7 +631,7 @@ img {
   margin-left: 8px;
   width: 10px;
   height: 15px;
-  background-image: url(/assets/img/arrow-3.svg);
+  background-image: url(../img/arrow-3.svg);
   background-size: contain;
   background-repeat: no-repeat;
   transform: translateY(2px);
@@ -743,7 +743,7 @@ img {
   padding: 50px;
   max-width: 1170px;
   border-radius: 12px;
-  background: var(--charcoal-color) url(/assets/img/sun.png) 80% bottom no-repeat;
+  background: var(--charcoal-color) url(../img/sun.png) 80% bottom no-repeat;
 }
 
 .footer-info-container {
@@ -824,21 +824,21 @@ img {
 }
 
 .trip-icon {
-  background-image: url(/assets/img/tripadvisor.png);
+  background-image: url(../img/tripadvisor.png);
 }
 
 .twitter-icon {
-  background-image: url(/assets/img/twitter.png);
+  background-image: url(../img/twitter.png);
 }
 
 .facebook-icon {
-  background-image: url(/assets/img/facebook.png);
+  background-image: url(../img/facebook.png);
 }
 
 .vk-icon {
-  background-image: url(/assets/img/vk.png);
+  background-image: url(../img/vk.png);
 }
 
 .google-icon {
-  background-image: url(/assets/img/google.png);
+  background-image: url(../img/google.png);
 }
